# SQUAD

./: .bumpversion.cfg  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
squad_py/: cosmx_aux.py  example.py
tests/: test_example.py
