[tool.poetry]
name = "squad_py"
version = "0.2.0"
description = "Spatial QUality Assessment and Diagnosis"
authors = ["fengsh <shaohong.feng.78@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "squad_py" }
]

[tool.poetry.dependencies]
python = "^3.10, < 3.13"
spatialdata-io = "^0.1.5"
spatialdata = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


